--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="wrap">
+        <header class="header">
+            <nav class="nav">
+                <a href="#" class="nav__logo"><img src="img/logo.svg" alt="logo" class="logo__img"></a>
+                <ul class="nav__menu">
+                    <li><a href="" class="menu__button active">Home</a></li>
+                    <li><a href="" class="menu__button">Services</a></li>
+                    <li><a href="" class="menu__button">Projects</a></li>
+                    <li><a href="" class="menu__button">About</a></li>
+                    <li><a href="" class="menu__button">Careers</a></li>
+                    <li><a href="" class="menu__button">Blogs</a></li>
+                    <li><a href="" class="menu__button--contact">Contact Us</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
